# CPP-ML-Interface

./: .gitignore  .gitmodules  CMakeList.txt  CMakeLists.txt  README.md  build.sh  env.sh  example.config.toml  install.sh  requirements.txt  set_env_claix23_cuda12.4.sh  test.cpp
documentation/: generate_uml_diagram.sh  new.puml
include/: c_api.h  config.hpp  config_overrides.hpp  generated_registry.hpp  logging.hpp  ml_coupling.hpp  ml_coupling_data.hpp  new.puml  tool.h
include/application/: ml_coupling_application.hpp  ml_coupling_application_turbulence_closure.hpp
include/application/properties/: ml_coupling_application_properties.hpp
include/behavior/: ml_coupling_behavior.hpp  ml_coupling_behavior_default.hpp  ml_coupling_behavior_periodic.hpp
include/data/: ml_coupling_data.hpp  ml_coupling_data_type.hpp  ml_coupling_memory_layout.hpp
include/data_processor/: ml_coupling_data.hpp  ml_coupling_data_processor.hpp  ml_coupling_data_processor_simple.hpp
include/normalization/: ml_coupling_minmax_normalization.hpp  ml_coupling_normalization.hpp
include/provider/: ml_coupling_provider.hpp  ml_coupling_provider_aixelerate.hpp  ml_coupling_provider_aixelerator.hpp  ml_coupling_provider_flexible.hpp  ml_coupling_provider_phydll.hpp  ml_coupling_provider_smartsim.hpp
misc/: maia_vars_doc.md  smartsim_cpu.txt  smartsim_not_built.txt
scripts/: generate_registry.py  generate_registry_old.py  test_generate_registry_abstract_detection.py  test_generate_registry_constructor_visibility.py  test_generate_registry_defaults.py
src/: c_api.cpp  main.cpp
testdir/: generated_registry.cpp
